# pixelizer

./: .gitignore  ARCHITECTURE.md  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
cli/: Cargo.toml  default_pipeline.yaml
cli/src/: main.rs
core/: Cargo.toml  DESIGN.md  GPU_NOTES.md  README.md  ROADMAP.md
core/src/: blur.rs  color_utils.rs  downsample.rs  lib.rs  normalize.rs  op_schema.rs  palette_map.rs  posterize.rs  trim_height.rs  trim_width.rs  ui_api.rs  upscale.rs
core/src/op_schema/: labels.rs  tables.rs
core/tests/: pipeline.rs
src/: app.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
webui/: Cargo.toml  README.md  ROADMAP.md  Trunk.toml  foo.txt  index.html  palettes.yaml
webui/src/: main.rs  op_card.rs  op_instance.rs  pipeline_list.rs  viewport.rs
webui/src/op_card/: config.rs  op_config_view.rs
webui/src/op_card/config/: blur.rs  color_picker.rs  dither.rs  downsample.rs  generic_config.rs  normalize.rs  number_slider.rs  palette_map.rs  posterize.rs  swatches.rs  upscale.rs
webui/src/op_card/config/generic_config/: sliders.rs
webui/src/op_card/config/palette_map/: color_picker.rs  dither.rs  dropdown.rs  dropzone.rs  swatches.rs
webui/src/op_instance/: boundary.rs  default.rs
webui/src/pipeline_list/: add_op.rs  inserter.rs  yaml_preview.rs
