[package]
name = "pixelizer-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pixelizer-core = { path = "../core" }
wasm-bindgen = "0.2"
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
console_error_panic_hook = "0.1"
