[package]
name = "webui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = { version = "0.19.0", features = ["use_element_size"] }
pixelizer-core = { version = "0.1.0", path = "../core" }
serde_json = "1.0.150"
yaml_serde = "0.10.4"
